# Sparkle-wayland

./: .gitmodules  CMakeLists.txt  Makefile  TODO  main.cpp  pack_pcm.sh  replace.sh  sparkle  sparkle.cpp  sparkle.h  sparkle_bouncer.h  sparkle_callback.cpp  sparkle_compositor.cpp  sparkle_compositor.h  sparkle_global.h  sparkle_keyboard.cpp  sparkle_keyboard.h  sparkle_output.cpp  sparkle_output.h  sparkle_region.cpp  sparkle_region.h  sparkle_resource.cpp  sparkle_seat.cpp  sparkle_seat.h  sparkle_shell.cpp  sparkle_shell.h  sparkle_shell_surface.cpp  sparkle_shell_surface.h  sparkle_surface.cpp  sparkle_surface.h  sparkle_x11.cpp  sparkle_x11.h  sparkle_x11_surface.cpp  sparkle_x11_surface.h  test  upload.sh  upload_documentation.sh  upload_notes.sh
apk/: .gitignore  Makefile  local.properties  notes.txt  update_version.sh
apk/app/: build.gradle
apk/app/src/main/: AndroidManifest.xml  cpp
apk/app/src/main/assets/: settings.lua  settings.xml  sparkle.config  sparkle.lua  sparkle.sh  update.sh  user.lua  user.sh
apk/app/src/main/cpp/: CMakeLists.txt  SparkleCompositorAndroid.cpp  SparkleCompositorAndroid.h  SparkleCompositorSurfaceAndroid.cpp  SparkleCompositorSurfaceAndroid.h  SparkleJavaObject.cpp  SparkleJavaObject.h  SparkleService.cpp  SparkleService.h  SparkleView.cpp  SparkleView.h  sion_keymap.h  sparkle_android.cpp  sparkle_android.h  sparkle_android_logger.cpp  sparkle_android_logger.h  sparkle_android_surface.cpp  sparkle_android_surface.h  sparkle_audio.cpp  sparkle_audio.h  sparkle_java_object.cpp  sparkle_java_object.h  sparkle_main.cpp  sparkle_main_activity.cpp  sparkle_main_activity.h  sparkle_player.cpp  sparkle_player.h  sparkle_service.cpp  sparkle_service.h  sparkle_view.cpp  sparkle_view.h
apk/app/src/main/java/com/sion/sparkle/: MainActivity.java  SparkleEditorActivity.java  SparkleService.java  SparkleView.java  WereApplication.java
apk/app/src/main/res/layout/: editor.xml  main.xml  notification_small.xml  viewer.xml
apk/app/src/main/res/values/: strings.xml
documentation/: generate.py  style.css
documentation/input/english/: contacts.in  index.in
documentation/input/russian/: audio.in  autolaunch.in  basics.in  contacts.in  details.in  index.in  requirements.in  settings.in  vi.in
documentation/output/english/: contacts.html  index.html
documentation/output/russian/: audio.html  autolaunch.html  basics.html  contacts.html  details.html  index.html  requirements.html  settings.html  vi.html
foreign/: .gitignore  mogryph.sh
foreign/configure/: libexpat  libffi  lua  lua.patch  wayland
foreign/lua/: makefile
foreign/wayland/: Makefile.am
notes/: gen.py  head.html  index.html  style.css
notes/pages/: 01_Требования.html  02_Вступление.html  03_Подробности.html  04_Лог.html  05_Адский_скрипт.html  06_Мутные_экраны.html  07_Звук.html  08_Настройки.html  99_Контакты.html  audio.in  autolaunch.in  contacts.in  details.in  introduction.in  log.in  requirements.in  screens.in  settings.in  vi.in
pcm_sparkle/: .gitignore  1.asoundrc  Makefile  notes_pulse.txt  pcm_sparkle.c  push.sh  were1_ring_buffer.c  were1_ring_buffer.h  were1_tmpfile.c  were1_tmpfile.h  were1_unix_socket.c  were1_unix_socket.h
scanner/: Makefile  generate.sh  scanner.c
scanner/src/: scanner.c
sparkle_android/: CMakeLists.txt  sparkle_android_logger.h  sparkle_audio.cpp  sparkle_audio.h  sparkle_keymap.h  sparkle_main_activity.cpp  sparkle_main_activity.h  sparkle_player.cpp  sparkle_player.h  sparkle_service.cpp  sparkle_service.h  sparkle_view.cpp  sparkle_view.h  were_android_application.cpp  were_android_application.h
sparkle_android/legacy/: sparkle_view.h
sparkle_common/: CMakeLists.txt  sparkle.cpp  sparkle.h  sparkle_bouncer.cpp  sparkle_bouncer.h  sparkle_callback.h  sparkle_compositor.h  sparkle_global.cpp  sparkle_global.h  sparkle_keyboard.h  sparkle_output.h  sparkle_platform.cpp  sparkle_platform.h  sparkle_platform_surface.cpp  sparkle_platform_surface.h  sparkle_pointer.cpp  sparkle_pointer.h  sparkle_resource.cpp  sparkle_resource.h  sparkle_seat.h  sparkle_settings.cpp  sparkle_settings.h  sparkle_shell.h  sparkle_surface.cpp  sparkle_surface.h  sparkle_touch.cpp  sparkle_touch.h
sparkle_common/legacy/: sparkle_platform.cpp  sparkle_platform_surface.cpp  sparkle_platform_surface.h
sparkle_x11/: CMakeLists.txt  Makefile  main.cpp  settings.lua  settings.xml  sparkle.config  sparkle_x11.cpp  sparkle_x11.h  sparkle_x11_surface.cpp  sparkle_x11_surface.h  valgrind.sh
tweaks/: mpv.conf
upload/: .gitignore  contacts.txt  mpv.conf  notes.html  sparkle.apk  user.sh
were/: CMakeLists.txt  LICENSE  were.cpp  were.h  were1_ring_buffer.c  were1_ring_buffer.h  were1_tmpfile.c  were1_tmpfile.h  were1_unix_socket.c  were1_unix_socket.h  were1_xcb.c  were1_xcb.h  were_backtrace.cpp  were_backtrace.h  were_capability_collapse.cpp  were_capability_collapse.h  were_capability_debug.cpp  were_capability_debug.h  were_capability_integrator.cpp  were_capability_integrator.h  were_capability_managed.cpp  were_capability_managed.h  were_capability_rc.cpp  were_capability_rc.h  were_capability_rc_simple.cpp  were_capability_rc_simple.h  were_capability_sentinel.cpp  were_capability_sentinel.h  were_capability_thread.cpp  were_capability_thread.h  were_capability_thread_simple.cpp  were_capability_thread_simple.h  were_class_wrapper.cpp  were_class_wrapper.h  were_connect.cpp  were_connect.h  were_deadline_timer.cpp  were_deadline_timer.h  were_debug.cpp  were_debug.h  (+64 more)
were/legacy/: were_object_base.cpp  were_object_base.h  were_platform_surface_provider.h  were_x11_surface.cpp  were_x11_surface_provider.h
were/math/: were_matrix.cpp  were_matrix.h  were_point.cpp  were_point.h  were_rect.cpp  were_vector.cpp  were_vector.h
were/test/: .gitignore  CMakeLists.txt  Makefile  main.cpp
were/tests/: CMakeLists.txt  Makefile  client.cpp  main.cpp  pbo.cpp  server.cpp  surface.cpp
